# ChangeLog for games-emulation/xmess
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/xmess/ChangeLog,v 1.61 2008/03/13 20:25:04 wolf31o2 Exp $

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.83.1.ebuild:
  QA cleanup: Fix quoting (again).

  06 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.83.1.ebuild:
  QA cleanup: Fix quoting.

  12 Mar 2007; Marius Mauch <genone@gentoo.org> xmess-0.83.1.ebuild,
  xmess-0.105.ebuild, xmess-0.106.ebuild:
  Replacing einfo with elog

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.83.1.ebuild,
  xmess-0.105.ebuild, xmess-0.106.ebuild:
  Change all instances of [ to [[.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  01 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.83.1.ebuild,
  xmess-0.105.ebuild, xmess-0.106.ebuild:
  Removing old virtual/x11 dependency.

  12 Jul 2006; Danny van Dyk <kugelfang@gentoo.org> xmess-0.83.1.ebuild:
  QA: Added expat, lirc, xinerama to IUSE.

  08 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.106.ebuild:
  Stable on amd64.

  05 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.106.ebuild:
  bug #135467 was bad hardware.  allow sparc keyword again.

  04 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.106.ebuild:
  drop sparc keyword for now since it doesn't seem to compile? - bug #135467

*xmess-0.106 (02 Jun 2006)

  02 Jun 2006; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.106.ebuild:
  version bump

*xmess-0.105 (17 Apr 2006)

  17 Apr 2006; Michael Sterrett <mr_bones_@gentoo.org> +xmess-0.105.ebuild:
  version bump

  26 Mar 2006; Michael Sterrett <mr_bones_@gentoo.org> xmess-0.104.ebuild:
  sync with xmame ebuild

  24 Mar 2006; Chris Gianelloni <wolf31o2@gentoo.org> xmess-0.83.1.ebuild,
  -xmess-0.103.ebuild:
  Clean up older ebuilds and port 0.83.1 to modular X.

*xmess-0.104 (23 Mar 2006)
